--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0-rc.0",
     "react": "^16.8.6",
+    "react-act": "^1.0.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
