feat: redux refactor into two reducers

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reduce-reducers": "^1.0.4",
     "redux": "^4.0.4",
     "redux-act": "^1.7.7",
     "use-react-router": "^1.0.7"
