--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.2.1",
     "deep-diff": "^1.0.2",
+    "json-server": "^0.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fetch-hook": "^1.6.4",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -21,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -s /tmp -d 500 -w -p 8000 ./src/data/movies.json"
   },
   "eslintConfig": {
     "extends": "react-app"
